[package]
name = "cfm"
description = "The last file manager you'll ever need"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "file-manager"]
authors = ["Nils <nils@nilsand.re>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NilsIrl/cfm"
readme = "README.md"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
structopt = "0.3.21"
